--- a/app/health/cbf-health-view/cbf-health-view.html
+++ b/app/health/cbf-health-view/cbf-health-view.html
@@ -2,9 +2,13 @@
 
   <md-grid-list md-cols={{vm.desired_columns}} md-row-height="1:1" md-gutter="12px">
 
-    <md-grid-tile md-rowspan='1' md-colspan='2' >
-      <div class='band-status-card md-whiteframe-1dp' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 1</h3>
+    <md-grid-tile ng-repeat="sub_array in vm.subarrays"
+      md-rowspan='1' md-colspan='2'>
+      <div class='band-status-card md-whiteframe-1dp' ng-class='sub_array.state'
+            layout="column" layout-align="none center">
+        <h3 class='band-status-title' >
+          {{sub_array.name}}: {{sub_array.state}}
+        </h3>
         <div class='band-status-content' layout="row" layout-align="center center">
           <div class='band-status'>
               <div semi-circle-with-label class='semi-circle-with-label' type='top' vm=vm></div>
@@ -21,141 +25,11 @@
           </div>
         </div>
         <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
           <span class='band-status-footer-text'>fhost</span>
+          <span class='band-status-footer-text'>xhost</span>
         </div>
       </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='2' >
-      <div class='band-status-card md-whiteframe-1dp' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 1</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <div semi-circle-with-label class='semi-circle-with-label' type='top' vm=vm></div>
-              <div semi-circle-with-label class='semi-circle-with-label' type='bottom' vm=vm></div>
-          </div>
-
-          <div class='band-status'>
-              <div class='semi-circle-with-label'>
-                <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              </div>
-              <div class='semi-circle-with-label'>
-                <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-              </div>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='1' >
-      <div class='band-status-card md-whiteframe-1dp inactive' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 2</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='1' >
-      <div class='band-status-card md-whiteframe-1dp inactive' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 2</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='1' >
-      <div class='band-status-card md-whiteframe-1dp inactive' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 2</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='1' >
-      <div class='band-status-card md-whiteframe-1dp inactive' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 2</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
-
-    <md-grid-tile md-rowspan='1' md-colspan='1' >
-      <div class='band-status-card md-whiteframe-1dp inactive' layout="column" layout-align="none center">
-        <h3 class='band-status-title'>subarray 2</h3>
-        <div class='band-status-content' layout="row" layout-align="center center">
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-
-          <div class='band-status'>
-              <semi-circle-with-label type='top' vm=vm></semi-circle-with-label>
-              <semi-circle-with-label type='bottom' vm=vm></semi-circle-with-label>
-          </div>
-        </div>
-        <div class='band-status-footer' layout="row">
-          <span class='band-status-footer-text'>xhost</span>
-          <span class='band-status-footer-text'>fhost</span>
-        </div>
-      </div>
-    </md-grid-tile>
+    <md-grid-tile>
 
   </md-grid-list>
 
