Address PR comments from @ajoubertza

--- a/app/health/cbf-health-view/cbf-health-view.html
+++ b/app/health/cbf-health-view/cbf-health-view.html
@@ -1,6 +1,6 @@
 <div class='cbf-health-view' ng-controller="CbfHealthViewCtrl as vm">
 
-  <md-grid-list md-cols={{vm.desired_columns}} md-row-height="1:1" md-gutter="12px">
+  <md-grid-list md-cols={{vm.desiredColumns}} md-row-height="1:1" md-gutter="12px">
 
     <md-grid-tile ng-repeat="sub_array in vm.subarrays"
       md-rowspan='1' md-colspan='2'>
