--- a/app/video/video.html
+++ b/app/video/video.html
@@ -63,25 +63,25 @@
                     <md-button ng-click="vm.tiltFarUp()" class="md-icon-button md-raised md-primary" title="Tilt Far Up">
                         <span style="transform:rotate(90deg);" class="fa fa-step-backward md-fab-fa-icon-small"></span>
                     </md-button>
-                    <md-button ng-click="vm.tiltUp()" class="md-icon-button md-raised md-primary" title="Tilt Up 5 Degrees">
+                    <md-button ng-click="vm.tiltUp()" class="md-icon-button md-raised md-primary" title="Tilt Up for {{vm.stepTimeValue}} seconds">
                         <span class="fa fa-caret-up md-fab-fa-icon-small"></span>
                     </md-button>
                     <div layout="row">
                         <md-button ng-click="vm.panFarLeft()" class="md-icon-button md-raised md-primary" title="Pan Far Left">
                             <span class="fa fa-step-backward md-fab-fa-icon-small"></span>
                         </md-button>
-                        <md-button ng-click="vm.panLeft()" class="md-icon-button md-raised md-primary" title="Pan Left 5 Degrees">
+                        <md-button ng-click="vm.panLeft()" class="md-icon-button md-raised md-primary" title="Pan Left for {{vm.stepTimeValue}} seconds">
                             <span class="fa fa-caret-left md-fab-fa-icon-small"></span>
                         </md-button>
                         <span flex></span>
-                        <md-button ng-click="vm.panRight()" class="md-icon-button md-raised md-primary" title="Pan Right 5 Degrees">
+                        <md-button ng-click="vm.panRight()" class="md-icon-button md-raised md-primary" title="Pan Right for {{vm.stepTimeValue}} seconds">
                             <span class="fa fa-caret-right md-fab-fa-icon-small"></span>
                         </md-button>
                         <md-button ng-click="vm.panFarRight()" class="md-icon-button md-raised md-primary" title="Pan Far Right">
                             <span class="fa fa-step-forward md-fab-fa-icon-small"></span>
                         </md-button>
                     </div>
-                    <md-button ng-click="vm.tiltDown()" class="md-icon-button md-raised md-primary" title="Tilt Down 5 Degrees">
+                    <md-button ng-click="vm.tiltDown()" class="md-icon-button md-raised md-primary" title="Tilt Down for {{vm.stepTimeValue}} seconds">
                         <span class="fa fa-caret-down md-fab-fa-icon-small"></span>
                     </md-button>
                     <md-button ng-click="vm.tiltFarDown()" class="md-icon-button md-raised md-primary" title="Tilt Far Down">
