The button looks purple and selects all antennas in config

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -170,13 +170,13 @@
 
         <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary" style="min-height: 90%; max-width: 41px; min-width: 41px; margin: 2px 4px 8px 0;"
             ng-disabled="!$root.expertOrLO" ng-click="vm.assignSelectedResources();"
-            title="Assign Resources to Subarray">
+            title="Assign Selected">
             <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
         </md-button>
 
-        <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary" style="min-height: 50%; max-width: 14px; min-width: 41px; margin: 2px 4px 8px 0;"
-            ng-disabled="!$root.expertOrLO" ng-click="vm.assignAllResources();"
-            title="Assign All Resources to Subarray">
+        <md-button md-theme="{{themeSecondary}}" class="md-raised md-primary" style="min-height: 90%; max-width: 41px; min-width: 41px; margin: 2px 4px 8px 0;"
+            ng-disabled="!$root.expertOrLO" ng-click="vm.assignAllReceptors();"
+            title="Assign All">
             <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
         </md-button>
 
