Ops voted green color for the new button

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -173,7 +173,7 @@
                 title="Assign Selected" style="height: 45%; min-width:30px">
                     <md-icon class="fa" md-font-icon="fa-chevron-left"></md-icon>
             </md-button>
-            <md-button md-theme="{{themeSecondary}}" class="md-raised md-primary" ng-disabled="!$root.expertOrLO" ng-click="vm.assignAllReceptors();"
+            <md-button md-theme="green" class="md-raised md-primary" ng-disabled="!$root.expertOrLO" ng-click="vm.assignAllReceptors();"
                 title="Assign All Receptors" style="height: 45%; min-width:30px">
                     <md-icon class="fa" md-font-icon="fa-chevron-left"></md-icon>
             </md-button>
