--- a/app/health/config-health-view/config-health-view.html
+++ b/app/health/config-health-view/config-health-view.html
@@ -58,7 +58,14 @@
             <receptor-health-pack-map class="treemap-container" size-storage-key="configHealthDisplaySize" receptor="item" ng-switch-when="Pack"></receptor-health-pack-map>
             <receptor-health-partition-map class="treemap-container" size-storage-key="configHealthDisplaySize" receptor="item" ng-switch-when="Partition"></receptor-health-partition-map>
             <receptor-health-icicle-map class="treemap-container" size-storage-key="configHealthDisplaySize" receptor="item" ng-switch-when="Icicle"></receptor-health-icicle-map>
-            <receptor-health-sunburst-map class="treemap-container" size-storage-key="configHealthDisplaySize" receptor="item" ng-right-click="vm.openMenuItems($event)" menu-items="vm.menuItems" ng-switch-when="Sunburst"></receptor-health-sunburst-map>
+            <receptor-health-sunburst-map class="treemap-container"
+              ng-class="{'hide-menu': !vm.sensorValue}"
+              size-storage-key="configHealthDisplaySize"
+              receptor="item"
+              ng-right-click="vm.openMenuItems($event)"
+              menu-items="vm.menuItems"
+              ng-switch-when="Sunburst">
+            </receptor-health-sunburst-map>
         </div>
 
     </div>
