--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -33,9 +33,9 @@
 
                         <span flex></span>
 
-                        <md-menu style="margin: 0 108px; padding: 0; position: relative" class="subarray-mode-button">
+                        <md-menu style="margin: 0 248px; padding: 0; position: relative" class="subarray-mode-button">
                             <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)" title="Remaining Time to Next Global">
-                                <span class="fa fa-chevron-down subarray-select-chevron" style="top: 7px"></span>
+                                <span class="subarray-select-chevron" style="top: 7px"></span>
                                 <span style="margin-left: 16px">NGS: {{ vm.minGlobalSyncTime() ? vm.minGlobalSyncTime() : 'None ' }}<b> Hrs</b></span>
                             </span>
                         </md-menu>
