--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -30,10 +30,7 @@
                                 </md-menu-item>
                             </md-menu-content>
                         </md-menu>
-
-                        <span flex></span>
-
-                        <md-menu style="margin: 0 380px; padding: 0; position: relative">
+                        <md-menu style="margin: 0; padding: 0; position: absolute">
                             <md-button class="subarray-config-menu-button" title="Remaining Time to Next Global Sync" ng-click="$mdMenu.open($event); $event.stopPropagation()"
                                 style="font-size: 20px">
                                 <span class="subarray-select-chevron" style="top: 12px"></span>
@@ -42,6 +39,8 @@
                                 </span>
                             </md-button>
                         </md-menu>
+
+                        <span flex></span>
 
                         <md-menu style="margin: 0 8px; padding: 0; position: relative" class="subarray-mode-button">
                             <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)">
