Fixing default displays
Placing dashes instead None/infinity, and instead of using built-in `Math.min` function - we have used sort method.

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -35,7 +35,7 @@
                                 style="font-size: 20px">
                                 <span class="subarray-select-chevron" style="top: 12px"></span>
                                 <span style="margin-left: 14px">
-                                    NGS : <b>{{vm.minGlobalSyncTime() ? vm.minGlobalSyncTime() : 'None '}} Hrs</b>
+                                    NGS : <b>{{vm.minGlobalSyncTime() ? vm.minGlobalSyncTime() : '--- '}} Hrs</b>
                                 </span>
                             </md-button>
                         </md-menu>
