--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -29,7 +29,7 @@
                                     </md-button>
                                 </md-menu-item>
                             </md-menu-content>
-                            <md-button class="subarray-config-menu-button" title="Remaining Time to Next Global Sync" ng-click="$mdMenu.open($event); $event.stopPropagation()"
+                            <md-button class="subarray-config-menu-button" title="Remaining Time to Next Global Sync" ng-click="vm.navigateToSensorSensorGroup($event); $event.stopPropagation()"
                                 style="font-size: 20px">
                                 <span class="subarray-select-chevron" style="top: 12px"></span>
                                 <span style="margin-left: 400px">
