--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -29,14 +29,20 @@
                                     </md-button>
                                 </md-menu-item>
                             </md-menu-content>
+                            <md-button class="subarray-config-menu-button" title="Remaining Time to Next Global Sync" ng-click="vm.navigateToSensorSensorGroup($event); $event.stopPropagation()"
+                                style="font-size: 20px">
+                                <span class="subarray-select-chevron" style="top: 12px"></span>
+                                <span style="margin-left: 400px">
+                                    NGS : <b>{{vm.minGlobalSyncTime()==undefined ? '--- ' : vm.minGlobalSyncTime()}} Hrs</b>
+                                </span>
+                            </md-button>
                         </md-menu>
-
                         <span flex></span>
 
                         <md-menu style="margin: 0 8px; padding: 0; position: relative" class="subarray-mode-button">
                             <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)">
                                 <span class="fa fa-chevron-down subarray-select-chevron" style="top: 7px"></span>
-                                <span style="margin-left: 16px">MODE: <b>{{vm.subarray.mode}}</b></span> </span>
+                                <span style="margin-left: 16px">MODE: <b>{{vm.subarray.mode}}</b></span>
                             </span>
                             <md-menu-content>
                                 <md-menu-item ng-repeat="type in parent.vm.modeTypes">
